backend/deployments/kubernetes/service-grafana.yaml
apiVersion: v1
kind: Service
metadata:
  name: grafana
  namespace: masterfabric
  labels:
    app.kubernetes.io/name: grafana
spec:
  type: ClusterIP
  selector:
    app.kubernetes.io/name: grafana
  ports:
    - name: http
      port: 3000
      targetPort: http
