backend/deployments/kubernetes/service-loki.yaml
apiVersion: v1
kind: Service
metadata:
  name: loki
  namespace: masterfabric
  labels:
    app.kubernetes.io/name: loki
spec:
  type: ClusterIP
  selector:
    app.kubernetes.io/name: loki
  ports:
    - name: http
      port: 3100
      targetPort: http
