backend/deployments/kubernetes/service-nginx.yaml
apiVersion: v1
kind: Service
metadata:
  name: masterfabric-nginx
  namespace: masterfabric
  labels:
    app.kubernetes.io/name: masterfabric-nginx
spec:
  type: ClusterIP
  selector:
    app.kubernetes.io/name: masterfabric-nginx
  ports:
    - name: http
      port: 8080
      targetPort: http
