backend/deployments/kubernetes/service-prometheus.yaml
apiVersion: v1
kind: Service
metadata:
  name: prometheus
  namespace: masterfabric
  labels:
    app.kubernetes.io/name: prometheus
spec:
  type: ClusterIP
  selector:
    app.kubernetes.io/name: prometheus
  ports:
    - name: http
      port: 9090
      targetPort: http
